ui/rust_ui/logs/CompileDebug/diagnostic_20251217_015647.log

=== Standards Violations ===
[C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\src\main.rs] ❌ uses 'State' instead of 'AppState'
[C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\src\python_bridge.rs] ❌ uses println! instead of structured logging
[C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\src\terminal.rs] ❌ uses println! instead of structured logging
[C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\build.rs] ❌ uses println! instead of structured logging

=== cargo clean ===
Command: cargo clean
When: 2025-12-17 01:56:48
     Removed 1147 files, 319.3MiB total
Duration: 0.35 seconds

=== cargo build ===
Command: cargo build --all-targets --all-features
When: 2025-12-17 01:56:49
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
   Compiling windows-link v0.2.1
   Compiling once_cell v1.21.3
   Compiling version_check v0.9.5
   Compiling typenum v1.19.0
   Compiling cfg-if v1.0.4
   Compiling log v0.4.29
   Compiling serde_core v1.0.228
   Compiling pin-project-lite v0.2.16
   Compiling lazy_static v1.5.0
   Compiling memchr v2.7.6
   Compiling smallvec v1.15.1
   Compiling serde v1.0.228
   Compiling regex-syntax v0.8.8
   Compiling ryu v1.0.20
   Compiling itoa v1.0.15
   Compiling serde_json v1.0.145
   Compiling thiserror v1.0.69
   Compiling anyhow v1.0.100
   Compiling hashbrown v0.16.1
   Compiling equivalent v1.0.2
   Compiling unsafe-libyaml v0.2.11
   Compiling rust_ui v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui)
   Compiling cpufeatures v0.2.17
   Compiling windows-sys v0.61.2
   Compiling libloading v0.8.9
   Compiling thread_local v1.1.9
   Compiling sharded-slab v0.1.7
   Compiling tracing-core v0.1.35
   Compiling generic-array v0.14.7
   Compiling tracing-log v0.2.0
   Compiling aho-corasick v1.1.4
   Compiling indexmap v2.12.1
warning: rust_ui@0.1.0: Using Python 3.12 for PyO3 (full compatibility).
   Compiling nu-ansi-term v0.50.3
   Compiling syn v2.0.111
   Compiling tracing-subscriber v0.3.22
   Compiling regex-automata v0.4.13
   Compiling crypto-common v0.1.7
   Compiling block-buffer v0.10.4
   Compiling digest v0.10.7
   Compiling sha2 v0.10.9
   Compiling regex v1.12.2
   Compiling tracing-attributes v0.1.31
   Compiling serde_derive v1.0.228
   Compiling thiserror-impl v1.0.69
   Compiling tokio-macros v2.6.0
   Compiling tokio v1.48.0
   Compiling tracing v0.1.43
   Compiling core_math v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\core_math)
   Compiling plugin_loader v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\plugin_loader)
   Compiling validation v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\validation)
error: unexpected closing delimiter: `}`
 --> ui\rust_ui\bin\core_math\src\lib.rs:8:1
  |
1 | use tracing::{info, warn};
  |              -          - ...matches this closing brace
  |              |
  |              this opening brace...
...
8 | }
  | ^ unexpected closing delimiter
System.Management.Automation.RemoteException
error: unexpected closing delimiter: `}`
  --> ui\rust_ui\bin\plugin_loader\src\lib.rs:23:1
   |
9  |     match Library::new(&path) {
   |                               - this opening brace...
...
22 |     }
   |     - ...matches this closing brace
23 | }
   | ^ unexpected closing delimiter
System.Management.Automation.RemoteException
error: unexpected closing delimiter: `}`
  --> ui\rust_ui\bin\validation\src\lib.rs:12:1
   |
12 | }
   | ^ unexpected closing delimiter
System.Management.Automation.RemoteException
error: could not compile `plugin_loader` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `core_math` (lib) due to 1 previous error
error: could not compile `validation` (lib) due to 1 previous error
Duration: 5.28 seconds

=== cargo check ===
Command: cargo check --all-targets --all-features --message-format=short
When: 2025-12-17 01:56:54
    Checking windows-link v0.2.1
    Checking once_cell v1.21.3
    Checking cfg-if v1.0.4
    Checking lazy_static v1.5.0
    Checking memchr v2.7.6
    Checking pin-project-lite v0.2.16
    Checking log v0.4.29
    Checking smallvec v1.15.1
    Checking regex-syntax v0.8.8
    Checking ryu v1.0.20
    Checking itoa v1.0.15
    Checking hashbrown v0.16.1
    Checking equivalent v1.0.2
    Checking cpufeatures v0.2.17
    Checking unsafe-libyaml v0.2.11
   Compiling rust_ui v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui)
    Checking typenum v1.19.0
    Checking serde_core v1.0.228
    Checking anyhow v1.0.100
    Checking thiserror v1.0.69
    Checking windows-sys v0.61.2
    Checking libloading v0.8.9
    Checking thread_local v1.1.9
warning: rust_ui@0.1.0: Using Python 3.12 for PyO3 (full compatibility).
    Checking tokio v1.48.0
    Checking sharded-slab v0.1.7
    Checking tracing-core v0.1.35
    Checking tracing-log v0.2.0
    Checking tracing v0.1.43
    Checking aho-corasick v1.1.4
    Checking indexmap v2.12.1
    Checking generic-array v0.14.7
    Checking crypto-common v0.1.7
    Checking block-buffer v0.10.4
    Checking digest v0.10.7
    Checking nu-ansi-term v0.50.3
    Checking sha2 v0.10.9
    Checking tracing-subscriber v0.3.22
    Checking regex-automata v0.4.13
    Checking serde v1.0.228
    Checking serde_json v1.0.145
    Checking plugin_loader v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\plugin_loader)
    Checking core_math v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\core_math)
ui\rust_ui\bin\plugin_loader\src\lib.rs:23:1: error: unexpected closing delimiter: `}`: unexpected closing delimiter
ui\rust_ui\bin\core_math\src\lib.rs:8:1: error: unexpected closing delimiter: `}`: unexpected closing delimiter
error: could not compile `plugin_loader` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `core_math` (lib) due to 1 previous error
Duration: 2.18 seconds

=== cargo clippy ===
Command: cargo clippy --all-targets --all-features -- -D warnings
When: 2025-12-17 01:56:56
   Compiling rust_ui v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui)
    Checking regex v1.12.2
    Checking plugin_loader v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\plugin_loader)
    Checking core_math v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\core_math)
    Checking serde_yaml v0.9.34+deprecated
    Checking ipc_bridge v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\ipc_bridge)
error: unexpected closing delimiter: `}`
  --> ui\rust_ui\bin\plugin_loader\src\lib.rs:23:1
   |
9  |     match Library::new(&path) {
   |                               - this opening brace...
...
22 |     }
   |     - ...matches this closing brace
23 | }
   | ^ unexpected closing delimiter
System.Management.Automation.RemoteException
error: could not compile `plugin_loader` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: unexpected closing delimiter: `}`
 --> ui\rust_ui\bin\core_math\src\lib.rs:8:1
  |
1 | use tracing::{info, warn};
  |              -          - ...matches this closing brace
  |              |
  |              this opening brace...
...
8 | }
  | ^ unexpected closing delimiter
System.Management.Automation.RemoteException
error: unexpected closing delimiter: `}`
  --> ui\rust_ui\bin\ipc_bridge\src\lib.rs:20:1
   |
13 |     let msg = Message {
   |                       - this opening brace...
...
16 |     };
   |     - ...matches this closing brace
...
20 | }
   | ^ unexpected closing delimiter
System.Management.Automation.RemoteException
error: could not compile `core_math` (lib) due to 1 previous error
error: could not compile `ipc_bridge` (lib) due to 1 previous error
Duration: 0.82 seconds

=== cargo test ===
Command: cargo test --all-targets --all-features -- --nocapture
When: 2025-12-17 01:56:57
   Compiling rust_ui v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui)
   Compiling serde v1.0.228
   Compiling plugin_loader v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\plugin_loader)
   Compiling validation v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\validation)
   Compiling core_math v0.1.0 (C:\Users\Administrator\Desktop\Projects\oasm\ui\rust_ui\bin\core_math)
warning: rust_ui@0.1.0: Using Python 3.12 for PyO3 (full compatibility).
error: unexpected closing delimiter: `}`
  --> ui\rust_ui\bin\plugin_loader\src\lib.rs:23:1
   |
9  |     match Library::new(&path) {
   |                               - this opening brace...
...
22 |     }
   |     - ...matches this closing brace
23 | }
   | ^ unexpected closing delimiter
System.Management.Automation.RemoteException
error: unexpected closing delimiter: `}`
 --> ui\rust_ui\bin\core_math\src\lib.rs:8:1
  |
1 | use tracing::{info, warn};
  |              -          - ...matches this closing brace
  |              |
  |              this opening brace...
...
8 | }
  | ^ unexpected closing delimiter
System.Management.Automation.RemoteException
error: unexpected closing delimiter: `}`
  --> ui\rust_ui\bin\validation\src\lib.rs:12:1
   |
12 | }
   | ^ unexpected closing delimiter
System.Management.Automation.RemoteException
error: could not compile `plugin_loader` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `core_math` (lib) due to 1 previous error
error: could not compile `validation` (lib) due to 1 previous error
Duration: 0.6 seconds
